[package]
name = "star_frame_proc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
idl = []

[dependencies]
proc-macro2 = "1.0.27"
syn = { version = "2.0.40", features = ["extra-traits"] }
quote = "1.0.9"
proc-macro-error = "1.0.4"
proc-macro-crate = "2.0.1"
easy_proc = "0.3.0"
heck = "0.4.1"
strum = { version = "0.25.0" , features = ["derive"] }
bs58 = "0.5.0"
