[package]
name = "star_frame_proc"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[features]
default = []
idl = []

[dependencies]
bs58 = { workspace = true }
daggy = { workspace = true }
derive_more = { workspace = true }
easy_proc = { workspace = true }
heck = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
strum = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
star_frame = { path = "../star_frame" }