[package]
name = "star_frame_proc"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
default = []

[dependencies]
bs58 = { workspace = true }
daggy = { workspace = true }
derive_more = { workspace = true }
itertools = { workspace = true }
easy_proc = { workspace = true }
heck = { workspace = true }
proc-macro-crate = { workspace = true }
proc-macro-error = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
star_frame = { workspace = true, features = ["test_helpers", "idl"] }