[package]
name = "star_frame_spl"
version.workspace = true
edition.workspace = true
publish.workspace = true
rust-version.workspace = true

[features]
# todo: are these default features okay?
default = ["token"]
token = []
idl = ["star_frame/idl"]

[dependencies]
star_frame.workspace = true
borsh.workspace = true
bytemuck.workspace = true

[dev-dependencies]
spl-associated-token-account.workspace = true
spl-token.workspace = true
pretty_assertions.workspace = true