[package]
name = "basic-0"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_0"

[features]
no_entrypoint = []
idl = ["star_frame/idl"]

[dependencies]
star_frame = { path = "../../star_frame" }

[dev-dependencies]
codama-nodes = "^0.4.0"
mollusk-svm = "0.3.0"
solana-sdk = "2.2"
