[package]
name = "basic-1"
version = "0.1.0"
edition = "2021"
publish = false
rust-version = "1.84.1"
license = "Apache-2.0"
repository = "https://github.com/staratlasmeta/star_frame"

[lib]
crate-type = ["cdylib", "lib"]
name = "basic_1"

[features]
no_entrypoint = []
idl = ["star_frame/idl"]

[dependencies]
star_frame = { path = "../../star_frame" }
borsh = { version = "1.5.7", features = ["derive"] }
bytemuck = { version = "^1.22.0", features = ["extern_crate_std", "min_const_generics", "derive"] }

[dev-dependencies]
codama-nodes = "^0.4.0"
hex = "0.4"
mollusk-svm = "0.3.0"
mollusk-svm-programs-token = "0.3.0"
solana-sdk = "2.2"
