[package]
name = "counter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[dependencies]
advance = { workspace = true }
borsh = { workspace = true }
bytemuck = { workspace = true }
solana-program = { workspace = true }
star_frame = { workspace = true }

[dev-dependencies]
#solana-client = "~1.18"
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
#solana-transaction-status = "~1.18"
tokio = "1.39.1"
