[package]
name = "counter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
star_frame = { workspace = true, features = ["idl"] }

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
tokio = "1.39.1"
