[package]
name = "counter"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "counter"

[features]
default = ["idl"]
idl = ["star_frame/idl"]

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
star_frame = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
codama-nodes.workspace = true
solana-sdk = { workspace = true }
tokio = "1.39.1"
