[package]
name = "faction_enlistment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "faction_enlistment"

[features]
prod = []
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
star_frame = { workspace = true, features = ["idl"] }
bytemuck.workspace = true

[dev-dependencies]
solana-program-test.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-client.workspace = true
tokio.workspace = true
rand.workspace = true
