[package]
name = "faction_enlistment"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "faction_enlistment"

[features]
prod = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl = ["star_frame/idl", "star_frame_spl/idl"]


[dependencies]
star_frame = { workspace = true }
star_frame_spl.workspace = true
bytemuck.workspace = true

[dev-dependencies]
spl-associated-token-account.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-client.workspace = true
tokio.workspace = true
rand.workspace = true
