[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "lib"]
name = "tic_tac_toe"

[dependencies]
advance = { path = "../../../advance" }
solana-program = "~1.16"
star_frame = { path = "../../star_frame" }
